tests/integration/errors/catch_unreachable.orng
// 361
fn main() -> Int {
    f() catch unreachable
}

fn f() -> ()!Int {
    .ok(361)
}